--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: sans-serif;
     font-size: 1.2rem;
+    line-height: 1.5;
 }
 main, footer {
     max-width: 80ch;
@@ -9,4 +10,9 @@ main, footer {
 }
 footer {
     margin-top: 5rem;
+}
+.footer2 {
+    margin-inline: auto;
+    
+    max-width: 80ch;
 }
